--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -29,13 +28,6 @@ body {
     margin-bottom: 5px;
 }
 
-.subtitulo {
-    font-size: 1.3rem;
-    text-align: center;
-    margin-bottom: 10px;
-    font-weight: normal;
-}
-
 nav {
     display: flex;
     justify-content: center;
@@ -57,10 +49,9 @@ nav button:hover {
     background-color: #a74242;
 }
 
-
 .conteudo {
     max-width: 900px;
-    margin: 120px auto 40px; 
+    margin: 120px auto 40px;
     padding: 0 20px;
     background-color: rgba(133, 56, 56, 0.1);
     border-radius: 8px;
@@ -103,9 +94,6 @@ nav button:hover {
 }
 
 .botao {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
     padding: 12px 25px;
     background-color: brown;
     color: white;
@@ -117,22 +105,71 @@ nav button:hover {
     transition: background-color 0.3s ease;
     z-index: 999;
 }
-    
+
 .botao:hover {
     background-color: #8b3b3b;
 }
 
-@media (max-width: 600px) {
-    .imagens-cardapio img {
-        width: 100%;
-        height: auto;
-    }
-
-    nav {
-        flex-direction: column;
-        gap: 10px;
-    }
+.botao.voltar-topo {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
 }
-.cardapio {
-     margin: 180px auto 40px;
+
+.botao.modal-btn {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+}
+
+.modal-content {
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 20px;
+    text-align: center;
+    width: 500px;
+    max-width: 90%;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.modal h2 {
+    color: #d9534f; 
+}
+
+.modal p {
+    font-size: 1rem;
+    margin: 15px 0;
+}
+
+
+#modal:target {
+    display: flex;
+}
+
+.modal a {
+    padding: 10px 20px;
+    background-color: #d9534f;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
+
+.modal a:hover {
+    background-color: #c9302c;
 }
